modify the .env-sample to DB_* and DB_USER to DB_USERNAME

--- a/server/.env-sample
+++ b/server/.env-sample
@@ -1,4 +1,4 @@
-PG_USER='google'
-PG_DATABASE='google_auth'
-PG_PASSWORD='google123'
-PG_HOST='localhost'
+DB_USERNAME=''
+DB_DATABASE='google_auth'
+DB_PASSWORD=''
+DB_HOST='localhost'
