--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argument-validator": "^0.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mariadb": "^3.0.2",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.26.0"
   },
   "devDependencies": {
