--- a/ui/web/package.json
+++ b/ui/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@react-oauth/google": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
