--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.2",
     "mysql2": "^2.3.3",
