--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "argument-validator": "^0.1.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
