--- a/server/.env-sample
+++ b/server/.env-sample
@@ -5,6 +5,11 @@ DB_HOST='localhost'
 
 HTTP_PORT = 4000;
 
+DB_TEST_USERNAME=''
+DB_TEST_DATABASE='chat_oauth_test'
+DB_TEST_PASSWORD=''
+DB_TEST_HOST='localhost'
+
 HTTP_SECRET='SALAMEEEEEEEEEE!'
 
 GOOGLE_CLIENT_ID=''
