--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "jest": "^29.3.1",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "supertest": "^6.3.3"
   }
 }
