--- a/ui/web/package.json
+++ b/ui/web/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-router-dom": "^6.4.3",
-    "styled-components": "^5.3.6"
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
