--- a/ui/web/package.json
+++ b/ui/web/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@react-oauth/google": "^0.5.0",
+    "axios": "^1.2.2",
+    "buffer": "^6.0.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
