--- a/ui/web/package.json
+++ b/ui/web/package.json
@@ -13,10 +13,12 @@
     "@react-oauth/google": "^0.5.0",
     "axios": "^1.2.2",
     "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.3",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
