--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "mariadb": "^3.0.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.26.0"
+    "sequelize": "^6.26.0",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "jest": "^29.3.1",
